force-app/main/default/objects/Car_Image__c/Car_Image__c.object-meta.xml
<CustomObject>
    <label>Car Image</label>
    <nameField>
        <displayFormat>IMG-{0000}</displayFormat>
        <label>Image Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Car Images</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>