force-app/main/default/objects/Car_Image__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IF( ISBLANK( Image_Url__c ),&apos;Images are not uploaded&apos;, IMAGE( Image_Url__c , &quot;Image Not Available&quot;,400,400))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>