force-app/main/default/objects/Car_Image__c/fields/Primary_Image__c.field-meta.xml
<CustomField>
    <fullName>Primary_Image__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Image</label>
    <type>Checkbox</type>
</CustomField>